--- a/src/features/cadastro-plantio/ui/fields/styles.module.scss
+++ b/src/features/cadastro-plantio/ui/fields/styles.module.scss
@@ -7,3 +7,21 @@
     -moz-appearance: textfield;
     appearance: textfield;
 }
+
+.list{
+    overflow-y: scroll;
+
+    //style the list
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: darken(#f0f0f0, 5%);
+        border-radius: 4px;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+        background: darken(#f0f0f0, 10%);
+    }
+}
