--- a/src/features/cadastro-plantio/ui/fields/styles.module.scss
+++ b/src/features/cadastro-plantio/ui/fields/styles.module.scss
@@ -13,15 +13,33 @@
 
     //style the list
     &::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
     }
 
     &::-webkit-scrollbar-thumb {
-        background: darken(#f0f0f0, 5%);
+        background: var(--input);
         border-radius: 4px;
     }
 
-    &::-webkit-scrollbar-thumb:hover {
-        background: darken(#f0f0f0, 10%);
+}
+
+.selectButton{
+    color: var(--muted-foreground);
+    transition: border 0.0875s ease-out, transform 0.0875s ease-out;
+
+
+    &[data-selected="true"] {
+        background-color: var(--primary-foreground);
+        color: var(--primary);
+        border: 2px solid var(--primary);
+        font-weight: 600;
+        
+        .imageOpcaoCultivo{
+            border-radius: 8px 8px 0 0 ;
+        }
+
+    }
+    &:hover {
+        transform: scale(1.05);
     }
 }
